@@ -116,17 +116,11 @@ form { padding: 0px; margin: 0px; }
 
 <div class="fl">Alignment:</div>
 <select size="1" name="align" id="f_align"
-  title="Positioning of this image">
-  <option value="" selected="1"                >Not set</option>
-  <option value="left"                         >Left</option>
-  <option value="right"                        >Right</option>
-  <option value="texttop"                      >Texttop</option>
-  <option value="absmiddle"                    >Absmiddle</option>
-  <option value="baseline"                     >Baseline</option>
-  <option value="absbottom"                    >Absbottom</option>
-  <option value="bottom"                       >Bottom</option>
-  <option value="middle"                       >Middle</option>
-  <option value="top"                          >Top</option>
+  title="Positioning of this table">
+  <option value="" selected="1">Not set</option>
+  <option value="left">Left</option>
+  <option value="right">Right</option>
+  <option value="center">center</option>
 </select>
 
 <p />
